<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen</name>
  <version>0.0.1</version>
  <description>Meta-package aggregating the ros2_canopen packages and documentation</description>
  <maintainer email="christoph.hellmann.santos@ipa.fraunhofer.de">Christoph Hellmann Santos</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>canopen_interfaces</exec_depend>
  <exec_depend>canopen_core</exec_depend>
  <exec_depend>canopen_base_driver</exec_depend>
  <exec_depend>lely_core_libraries</exec_depend>
  <exec_depend>canopen_proxy_driver</exec_depend>
  <exec_depend>canopen_base_driver</exec_depend>
  <exec_depend>canopen_402_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
