<?xml version="1.0"?>
<package format="2">
  <name>canopen_402</name>
  <version>0.8.3</version>
  <description>This implements the CANopen device profile for drives and motion control. CiA(r) 402</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="tdf@ipa.fhg.de">Thiago de Freitas</author>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/canopen_402</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>canopen_master</depend>
  <depend>class_loader</depend>

  <test_depend>rosunit</test_depend>

  <export>
     <canopen_402 plugin="${prefix}/canopen_402_plugin.xml" />
  </export>
</package>
